# libfactorydata

./: configure.ac
lib/: Makefile.am  operations.c
